<resources>
    <string name="app_name">Novus Vision</string>

    <string name="permission_denied">App is need this permission for load and save data from your device.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_security_question">Select security question</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="trending">Trending</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>
    <string name="popular_series">Popular Series</string>
    <string name="new_series">New Series</string>
    <string name="all_series">All Series</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="new_movies">New Movies</string>
    <string name="all_movies">All Movies</string>
    <string name="movie_cover_image">Movie Cover Image</string>
    <string name="play_image">Play Image</string>
    <string name="movie_photo_image">Movie Photo Image</string>
    <string name="rating_star_image">Rating Star Image</string>
    <string name="overview">OverView</string>
    <string name="language">Language</string>
    <string name="divider">:</string>
    <string name="subtitle">Subtitle</string>
    <string name="starring">Starring</string>
    <string name="description">Description</string>
    <string name="trailer">Trailer</string>
    <string name="add_to_playlist">Playlist</string>
    <string name="download">Download</string>
    <string name="season">Season</string>
    <string name="episode_photo_image">Episode Photo Image</string>
    <string name="security_answer">Security answer</string>
    <string name="please_wait">Please wait…</string>
    <string name="enter_email">Please enter email.</string>
    <string name="email_invalid">Email is invalid.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="short_password">Password must be greater then 6 characters.</string>
    <string name="confirm_your_password">Please confirm your password.</string>
    <string name="password_not_match">Password is not match.</string>
    <string name="enter_security_answer">Please enter your security answer.</string>
    <string name="check_connection">Please check your internet connection.</string>

    <string-array name="security_question">
        <item>What is your mother name?</item>
        <item>What is the name of your high school?</item>
        <item>What is the name of your favorite pet?</item>
        <item>What is the name of your birth place?</item>
        <item>What are you afraid of?</item>
    </string-array>

    <string name="verify_your_email">Verify your email</string>
    <string name="send_email_message">We have sent you a confirmation message to your email. Click confirm link in your email to verify.</string>
    <string name="did_not_receive_confirm_message">Didn\'t receive confirmation message?</string>
    <string name="resent_mail">Resent%s</string>

    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="change_email">Change Email</string>
    <string name="already_confirm">Already Confirm?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="please_verify_your_email">Please verify your email.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>