<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/popular_movies"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@+id/ibPopularMovies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibPopularMovies"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/new_movies"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@+id/ibNewMovies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvPopularMovies" />

        <ImageButton
            android:id="@+id/ibNewMovies"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNewMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:text="@string/all_movies"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@+id/ibAllMovies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvNewMovies" />

        <ImageButton
            android:id="@+id/ibAllMovies"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAllMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>